--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     font-family: Roya;
     font-size: 20px;
+    max-width: 1349px;
 }
 body {
     background: #f4f4f5;
@@ -23,11 +24,12 @@ header .menu ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    font-weight: bolder;
+    font-weight: normal;
 }
 header .menu ul li {
     float: right;
     margin-left:0;
+    box-sizing: border-box;
 }
 header .menu ul li a {
     text-decoration: none;
@@ -40,12 +42,20 @@ header .menu ul li a {
 header .menu ul li a:hover {
     background: #1ca1e9;
 }
-span {
-    display: block;
+header .menu ul li:first-child {
     background-color: black;
-    background-height: 50px;
 }
-header .menu ul li a .a {
-    background-color: #f4f4f5;
-    width: 100%;
+header .menu ul li:first-child a:hover {
+    background: none;
+}
+header .menu ul li:nth-child(12){
+    float: left;
+    margin-left: 0;
+    margin-right: 0;
+    box-sizing: border-box;
+    width: 60px;
+}
+header .menu ul li:nth-child(13) {
+    float: left;
+    margin-left: 13px;
 }
